--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => "まメme夢モゥ" %></h1>
 </div>
-<%= render @texts %>
-<script>
-  autosize(document.querySelectorAll('textarea'))
-</script>
+<ul id="text-entry", class="list-group">
+  <p class="hidden" id="save"></div>
+  <%= render @texts %>
+</ul>
